# gsmvault

./: .coveragerc  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_CHECKLIST.md  BREAKAGE_CHAINS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  GOVERNANCE.md  MASTER_PLAN.md  README.md  REGRESSION_REGISTRY.md  SECURITY_POLICY.md  SESSION_LOG.md  SKILL_SOURCES.md  conftest.py  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
.claude/agents/: accessibility-audit-orchestrator.md  accessibility-auditor.md  accessibility-color-contrast-checker.md  accessibility-keyboard-checker.md  accessibility-screen-reader-checker.md  accessibility-wcag-checker.md  ad-gate-integrity-checker.md  ad-reward-validator.md  admin-permission-enforcer.md  admin-registration-checker.md  ads-audit-orchestrator.md  affiliate-commission-calculator.md  affiliate-fraud-detector.md  affiliate-payout-validator.md  affiliate-self-referral-checker.md  affiliate-tracker.md  agent-format-validator.md  alpine-cloak-enforcer.md  alpine-correctness-checker.md  alpine-developer.md  alpine-error-boundary-checker.md  alpine-focus-trap-checker.md  alpine-keyboard-checker.md  alpine-lifecycle-analyzer.md  alpine-performance-checker.md  alpine-reactivity-checker.md  alpine-store-validator.md  alpine-transition-checker.md  api-auth-checker.md  api-builder.md  api-compatibility-checker.md  api-endpoint.md  api-security-auditor.md  api-throttle-checker.md  app-boundary-enforcer.md  atomic-scope-analyzer.md  auth-bypass-detector.md  auth-mfa-enforcer.md  auth-session-checker.md  auth-specialist.md  (+160 more)
.claude/commands/: accessibility.md  agents.md  alpine-audit.md  audit.md  cache-clear.md  celery-status.md  changelog-update.md  coverage-report.md  db-status.md  debug.md  dependency-audit.md  deploy-check.md  env-check.md  fix-all.md  fixture-generate.md  format-all.md  governance-status.md  health.md  htmx-audit.md  lint-fix.md  migration-check.md  new-app.md  new-feature.md  performance.md  pr.md  qa.md  regression-status.md  repo-hygiene-audit.md  review.md  rtl-audit.md  security.md  seed-data.md  seo-audit.md  session-log.md  split-godfile.md  static-build.md  template-check.md  test-admin.md  test-ads.md  test-api.md  (+11 more)
.claude/hooks/: accessibility-hook.ps1  admin-registration-check.ps1  alpine-cloak-check.ps1  csrf-audit-hook.ps1  dead-code-check.ps1  dependency-check.ps1  docstring-check.ps1  fragment-isolation-check.ps1  god-file-check.ps1  htmx-csrf-check.ps1  import-boundary.ps1  migration-safety.ps1  model-completeness.ps1  performance-hook.ps1  post-edit-no-versioned.ps1  post-edit-quality.ps1  pre-commit-no-duplicates.ps1  pre-commit-quality.ps1  pre-push-governance.ps1  pre-stop-quality.ps1  print-style-check.ps1  regression-check.ps1  related-name-check.ps1  secrets-scan-enhanced.ps1  secrets-scan.ps1  session-end-summary.ps1  session-start.ps1  tailwind-token-check.ps1  template-audit.ps1  template-extends-check.ps1  test-coverage-gate.ps1  type-check-changed.ps1  unused-import-check.ps1  url-namespace-check.ps1  xss-audit-hook.ps1  z-index-scale-check.ps1
.claude/rules/: admin-views.md  agent-format.md  alpine-patterns.md  api-layer.md  apps-config.md  auth-checks.md  backup-safety.md  cache-patterns.md  cdn-fallback.md  celery-tasks.md  changelog-format.md  connection-pooling.md  consent-enforcement.md  context-processors.md  cookie-security.md  cors-policy.md  csp-enforcement.md  database-indexes.md  django-models.md  financial-safety.md  fixtures-layer.md  forms-layer.md  frontend-templates.md  html-css-js-validation.md  htmx-patterns.md  javascript-safety.md  logging-safety.md  lucide-icons.md  management-commands.md  managers-layer.md  markdown-lint.md  middleware-layer.md  migrations-safety.md  no-duplicate-patterns.md  no-versioned-files.md  print-stylesheet.md  pyright-strict.md  queryset-optimization.md  rate-limit-enforcement.md  regression-registry-format.md  (+23 more)
.github/: copilot-instructions.md
.github/agents/: accessibility-audit-orchestrator.agent.md  accessibility-auditor.agent.md  accessibility-color-contrast-checker.agent.md  accessibility-keyboard-checker.agent.md  accessibility-screen-reader-checker.agent.md  accessibility-wcag-checker.agent.md  ad-gate-integrity-checker.agent.md  ad-reward-validator.agent.md  admin-permission-enforcer.agent.md  admin-registration-checker.agent.md  ads-audit-orchestrator.agent.md  affiliate-commission-calculator.agent.md  affiliate-fraud-detector.agent.md  affiliate-payout-validator.agent.md  affiliate-self-referral-checker.agent.md  affiliate-tracker.agent.md  agent-format-validator.agent.md  alpine-cloak-enforcer.agent.md  alpine-correctness-checker.agent.md  alpine-developer.agent.md  alpine-error-boundary-checker.agent.md  alpine-focus-trap-checker.agent.md  alpine-keyboard-checker.agent.md  alpine-lifecycle-analyzer.agent.md  alpine-performance-checker.agent.md  alpine-reactivity-checker.agent.md  alpine-store-validator.agent.md  alpine-transition-checker.agent.md  api-auth-checker.agent.md  api-compatibility-checker.agent.md  api-endpoint.agent.md  api-security-auditor.agent.md  api-throttle-checker.agent.md  app-boundary-enforcer.agent.md  atomic-scope-analyzer.agent.md  auth-bypass-detector.agent.md  auth-mfa-enforcer.agent.md  auth-session-checker.agent.md  auth-specialist.agent.md  authz-object-level-checker.agent.md  (+396 more)
.github/instructions/: admin.instructions.md  ads-management.instructions.md  alpine-components.instructions.md  api.instructions.md  consent.instructions.md  (+26 more)
app/: __init__.py  _platform_fix.py  asgi.py  celery.py  settings.py  settings_dev.py  settings_production.py  urls.py  wsgi.py
apps/: __init__.py
scripts/: check_page.py  cleanup_repo.py  fix_command_markdown_spacing.ps1  fix_markdown.py  fix_sequences.py  generate_audit_report.py  generate_plan_completion_artifacts.ps1  generate_week10_12_agents.ps1  homepage_output.html  test_consent_flow.py  verify_automation.py  verify_implementation.py
templates/: robots.txt  sitemap.xml  sitemap_index.xml
(+2325 files in other folders)
